Fixed mobile overflow issue

--- a/_sass/_post.scss
+++ b/_sass/_post.scss
@@ -102,7 +102,7 @@
 }
 
 .post-recommend-card{
-    display: grid;
+    //display: grid;
     grid-template-columns: auto;
     padding: 1em;
     margin: 1em;
@@ -115,9 +115,11 @@
 
 .post-recommend-img{
     align-self: center;
-    width: 10em;
+    width: 90%;
     height: auto;
     margin: 1em;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .post-recommend-info{
